--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,57 @@
   font-family: 'Roboto', sans-serif;
 }
 
+@-webkit-keyframes breathe {
+  60% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes breathe {
+  60% {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .header {
   width: 100vw;
   padding: 1.6rem 2.5rem;
   text-align: center;
+  position: relative;
+}
+
+.header .virus {
+  position: absolute;
+  z-index: -1;
+  -webkit-animation: breathe 4s ease infinite;
+          animation: breathe 4s ease infinite;
+  display: none;
+}
+
+@media (min-width: 840px) {
+  .header .virus {
+    display: block;
+  }
+}
+
+.header #firstVirus {
+  top: 16vh;
+  left: 20vw;
+}
+
+.header #secondVirus {
+  top: 5vh;
+  right: 22vw;
 }
 
 .header__logo {
@@ -24,7 +71,7 @@
 }
 
 .header__selection {
-  width: 50%;
+  width: 40%;
   outline: none;
   border: none;
   -webkit-appearance: none;
@@ -35,6 +82,8 @@
   text-align: center;
   color: #ff0000;
   background-color: #fdc5c5;
+  -webkit-box-shadow: 0px 2px 2px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 2px 2px 0 rgba(0, 0, 0, 0.5);
 }
 
 .flex-container {
@@ -47,27 +96,69 @@
           flex-direction: column;
 }
 
+@media (min-width: 840px) {
+  .flex-container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
 .flex-container .chart {
   width: 90vw;
-  height: 40vh;
+  height: 50vw;
   margin: 0 5vw;
   background-color: red;
 }
 
+@media (min-width: 840px) {
+  .flex-container .chart {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    height: 450px;
+    margin: 0.5rem 2vw;
+  }
+}
+
 .flex-container .feed {
   margin-top: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media (min-width: 840px) {
+  .flex-container .feed {
+    margin-top: 0;
+  }
 }
 
 .flex-container .card {
-  width: 90%;
-  margin: 1rem 5%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -ms-flex-preferred-size: 120px;
+      flex-basis: 120px;
+  margin: 1rem 2rem;
   border-radius: 10px;
   -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.5);
           box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
+@media (min-width: 840px) {
+  .flex-container .card {
+    margin: 0.5rem 0 0.5rem 2rem;
+  }
+}
+
 .flex-container .card__body {
-  padding: 0.8rem 1.8rem;
+  padding: 1.2rem 1.8rem;
   text-align: center;
 }
 
