--- a/css/style.scss
+++ b/css/style.scss
@@ -20,10 +20,52 @@ $colors: (
     @return map-get($colors, $color-name);
 }
 
+$desktop: 840px;
+
+@mixin desktop {
+    @media (min-width: #{$desktop}){
+        @content;
+    }
+}
+
+@keyframes breathe{
+    60%{transform: scale(1.5);}
+    100%{transform: scale(1.0);}
+}
+
+// @keyframes rotation{
+//     25%{transform: rotate(90deg);}
+//     50%{transform: rotate(180deg);}
+//     75%{transform: rotate(270deg);}
+//     100%{transform: rotate(360deg);}
+// }
+
 .header{
     width: 100vw;
     padding: 1.6rem 2.5rem;
     text-align: center;
+    position: relative;
+
+    .virus{
+        position: absolute;  
+        z-index: -1;
+        animation: breathe 4s ease infinite;
+        display: none;
+
+        @include desktop(){
+            display: block;
+        }
+    }
+
+    #firstVirus{
+        top: 16vh;
+        left: 20vw;
+    }
+
+    #secondVirus{
+        top: 5vh;
+        right: 22vw;
+    }
 
     &__logo{
         margin: -5rem 0;
@@ -36,7 +78,7 @@ $colors: (
     }
     
     &__selection{
-        width: 50%;
+        width: 40%;
         outline: none;
         border: none;
         appearance: none;
@@ -45,6 +87,7 @@ $colors: (
         text-align: center;
         color: color(danger-border);
         background-color: color(danger-bg);
+        box-shadow: 0px 2px 2px 0 rgba($color: #000000, $alpha: 0.5); 
     }
 }
 
@@ -52,25 +95,46 @@ $colors: (
     display: flex;
     flex-direction: column;
 
+    @include desktop(){
+        flex-direction: row;
+    }
+
     .chart{
         width: 90vw;
-        height: 40vh;
+        height: 50vw;
         margin: 0 5vw;
         background-color: red;
+
+        @include desktop(){
+            order: 1;
+            height: 450px;
+            margin: 0.5rem 2vw;
+        }
     }
     
     .feed{
         margin-top: 6px;
+        display: flex;
+        flex-direction: column;
+
+        @include desktop(){
+            margin-top: 0;
+        }
     }
     
     .card{
-        width: 90%;
-        margin: 1rem 5%;
+        flex: 1;
+        flex-basis: 120px;
+        margin: 1rem 2rem;
         border-radius: 10px;
         box-shadow: 1px 2px 4px 0 rgba($color: #000000, $alpha: 0.5);
 
+        @include desktop(){
+            margin: 0.5rem 0 0.5rem 2rem;
+        }
+
         &__body{
-            padding: 0.8rem 1.8rem;
+            padding: 1.2rem 1.8rem;
             text-align: center;
         }
 
