--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,6 @@
   width: 90vw;
   height: 50vw;
   margin: 0 5vw;
-  background-color: red;
 }
 
 @media (min-width: 840px) {
@@ -117,8 +116,9 @@
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+    width: 70vw;
     height: 450px;
-    margin: 0.5rem 2vw;
+    margin: 0.5rem 5vw;
   }
 }
 
