--- a/css/style.scss
+++ b/css/style.scss
@@ -103,12 +103,12 @@ $desktop: 840px;
         width: 90vw;
         height: 50vw;
         margin: 0 5vw;
-        background-color: red;
 
         @include desktop(){
             order: 1;
+            width: 70vw;
             height: 450px;
-            margin: 0.5rem 2vw;
+            margin: 0.5rem 5vw;
         }
     }
     
