--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,50 @@
   }
 }
 
+@-webkit-keyframes slide {
+  50% {
+    background-size: 60%;
+  }
+  100% {
+    background-position: 110%;
+  }
+}
+
+@keyframes slide {
+  50% {
+    background-size: 60%;
+  }
+  100% {
+    background-position: 110%;
+  }
+}
+
 .header {
   width: 100vw;
   padding: 1.6rem 2.5rem;
   text-align: center;
-  position: relative;
+}
+
+.header .line-loader {
+  width: 100%;
+  height: 6px;
+  background: -webkit-gradient(linear, left top, right top, from(#008cff), to(#008cff));
+  background: linear-gradient(to right, #008cff, #008cff);
+  background-color: lightgrey;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-size: 20%;
+  background-repeat: no-repeat;
+  background-position: -25%;
+  -webkit-animation: slide 1.5s ease infinite;
+          animation: slide 1.5s ease infinite;
+  display: none;
+}
+
+.header .loading {
+  display: block;
 }
 
 .header .virus {
@@ -186,13 +225,10 @@
 }
 
 .news {
-  overflow: scroll;
+  overflow-y: scroll;
   margin: 1.6rem auto;
   width: 95vw;
   height: 300px;
-  border-radius: 1rem;
-  -webkit-box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
 .news__heading {
