--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@
 }
 
 $colors: (
+    secondary: lightgrey,
     danger-bg: #fdc5c5,
     danger-border: #ff0000,
     info-bg: #cce8ff,
@@ -33,6 +34,11 @@ $desktop: 840px;
     100%{transform: scale(1.0);}
 }
 
+@keyframes slide{
+    50%{background-size: 60%;}
+    100%{background-position: 110%;}
+}
+
 // @keyframes rotation{
 //     25%{transform: rotate(90deg);}
 //     50%{transform: rotate(180deg);}
@@ -44,7 +50,29 @@ $desktop: 840px;
     width: 100vw;
     padding: 1.6rem 2.5rem;
     text-align: center;
-    position: relative;
+    // position: relative;
+
+    .line-loader{
+        width: 100%;
+        height: 6px;
+        // margin: 0;
+        // margin-top: 1rem;
+        background: linear-gradient(to right, color(info-border), color(info-border));
+        background-color: color(secondary);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        background-size: 20%;
+        background-repeat: no-repeat;
+        background-position: -25%;
+        animation: slide 1.5s ease infinite;
+        display: none;
+    }
+
+    .loading{
+        display: block;
+    }
 
     .virus{
         position: absolute;  
@@ -165,12 +193,11 @@ $desktop: 840px;
 }
 
 .news{
-    overflow: scroll;
+    overflow-y: scroll;
     margin: 1.6rem auto;
     width: 95vw;
     height: 300px;
-    border-radius: 1rem;
-    box-shadow: 0 1px 1px 1px rgba($color: #000000, $alpha: 0.5);
+    
 
     &__heading{
         margin: 1rem 2rem;
