--- a/css/style.scss
+++ b/css/style.scss
@@ -129,7 +129,7 @@ $desktop: 840px;
 
     .chart{
         width: 90vw;
-        height: 50vw;
+        height: 35vh;
         margin: 0 5vw;
 
         @include desktop(){
