--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 @-webkit-keyframes breathe {
@@ -236,6 +236,11 @@
   text-align: center;
 }
 
+.news__image {
+  width: 80px;
+  height: 80px;
+}
+
 .news__card {
   width: 95%;
   margin: 0.5rem auto;
@@ -243,14 +248,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   text-decoration: none;
   color: #008cff;
-  background-color: #cce8ff;
+  font-weight: bold;
+  border: 2px solid #008cff;
 }
 /*# sourceMappingURL=style.css.map */
