--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+li {
+  list-style-type: none;
+}
+
 @-webkit-keyframes breathe {
   60% {
     -webkit-transform: scale(1.5);
@@ -55,7 +59,7 @@
 
 .header .line-loader {
   width: 100%;
-  height: 10px;
+  height: 0.5rem;
   background: -webkit-gradient(linear, left top, right top, from(#008cff), to(#008cff));
   background: linear-gradient(to right, #008cff, #008cff);
   background-color: lightgrey;
@@ -225,7 +229,6 @@
 }
 
 .news {
-  overflow-y: scroll;
   margin: 1.6rem auto;
   width: 95vw;
   height: 300px;
@@ -234,11 +237,13 @@
 .news__heading {
   margin: 1rem 2rem;
   text-align: center;
+  color: #008cff;
 }
 
 .news__image {
   width: 80px;
   height: 80px;
+  margin-right: 1rem;
 }
 
 .news__card {
@@ -248,14 +253,27 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: first baseline;
+      -ms-flex-pack: first baseline;
+          justify-content: first baseline;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   text-decoration: none;
-  color: #008cff;
+  color: black;
+  -webkit-box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.5);
+          box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.5);
+  position: relative;
+}
+
+.news__time {
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
+  color: #c07d00;
+}
+
+.news__title {
   font-weight: bold;
-  border: 2px solid #008cff;
 }
 /*# sourceMappingURL=style.css.map */
