--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+li {
+  list-style-type: none;
+}
+
 $colors: (
   secondary: lightgrey,
   danger-bg: #fdc5c5,
@@ -62,9 +66,7 @@ $desktop: 840px;
 
   .line-loader {
     width: 100%;
-    height: 10px;
-    // margin: 0;
-    // margin-top: 1rem;
+    height: 0.5rem;
     background: linear-gradient(
       to right,
       color(info-border),
@@ -204,7 +206,6 @@ $desktop: 840px;
 }
 
 .news {
-  overflow-y: scroll;
   margin: 1.6rem auto;
   width: 95vw;
   height: 300px;
@@ -212,11 +213,13 @@ $desktop: 840px;
   &__heading {
     margin: 1rem 2rem;
     text-align: center;
+    color: color(info-border);
   }
 
   &__image {
     width: 80px;
     height: 80px;
+    margin-right: 1rem;
   }
 
   &__card {
@@ -224,11 +227,22 @@ $desktop: 840px;
     margin: 0.5rem auto;
     padding: 0.5rem 1rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: first baseline;
     align-items: center;
     text-decoration: none;
-    color: color(info-border);
+    color: black;
+    box-shadow: 1px 1px 1px 2px rgba($color: #000000, $alpha: 0.5);
+    position: relative;
+  }
+
+  &__time {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 0.5rem;
+    color: rgb(192, 125, 0);
+  }
+
+  &__title {
     font-weight: bold;
-    border: 2px solid color(info-border);
   }
 }
