--- a/css/style.scss
+++ b/css/style.scss
@@ -224,8 +224,10 @@ $desktop: 840px;
 
   &__card {
     width: 95%;
+    max-height: 150px;
+    overflow-y: hidden;
     margin: 0.5rem auto;
-    padding: 0.5rem 1rem;
+    padding: 0.8rem 1rem;
     display: flex;
     justify-content: first baseline;
     align-items: center;
@@ -234,15 +236,19 @@ $desktop: 840px;
     box-shadow: 1px 1px 1px 2px rgba($color: #000000, $alpha: 0.5);
     position: relative;
   }
+  &__details {
+    margin-bottom: 0.5rem;
+  }
 
   &__time {
     position: absolute;
-    bottom: 0.5rem;
-    right: 0.5rem;
+    bottom: 0.2rem;
+    right: 0.2rem;
     color: rgb(192, 125, 0);
   }
 
   &__title {
     font-weight: bold;
+    margin-bottom: 0.5rem;
   }
 }
